--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,8 @@
  * @name DiscordNight
  * @version 0.9.5.8
  * @description Dark and compact theme for BetterDiscord
- * @source https://github.com/KillYoy/DiscordNight/
- * @updateUrl https://raw.githubusercontent.com/KillYoy/DiscordNight/master/DiscordNight.css
- * @website 
- * @donate https://www.paypal.me/KillYoy
- * @patreon 
- * @invite 
  * @author KillYoy#0295
- * @authorId 98468214824001536
- * @authorLink 
+ * @author henriqurr
 */
 
 :root {
